.kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml -o .kubernetes
    kompose.service.type: LoadBalancer
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml -o .kubernetes
        kompose.service.type: LoadBalancer
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/raffleshopping-backend-raffle-network: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - env:
          - name: REACT_APP_API_KEY
            valueFrom:
              secretKeyRef:
                name: frontend-secret
                key: REACT_APP_API_KEY
          - name: REACT_APP_AUTH_DOMAIN
            valueFrom:
              secretKeyRef:
                name: frontend-secret
                key: REACT_APP_AUTH_DOMAIN
          - name: REACT_APP_PROJECT_ID
            valueFrom:
              secretKeyRef:
                name: frontend-secret
                key: REACT_APP_PROJECT_ID
          - name: REACT_APP_STORAGE_BUCKET
            valueFrom:
              secretKeyRef:
                name: frontend-secret
                key: REACT_APP_STORAGE_BUCKET
          - name: REACT_APP_MESSAGING_SENDER_ID
            valueFrom:
              secretKeyRef:
                name: frontend-secret
                key: REACT_APP_MESSAGING_SENDER_ID
          - name: REACT_APP_APP_ID
            valueFrom:
              secretKeyRef:
                name: frontend-secret
                key: REACT_APP_APP_ID
          - name: REACT_APP_MEASUREMENT_ID
            valueFrom:
              secretKeyRef:
                name: frontend-secret
                key: REACT_APP_MEASUREMENT_ID
          image: airell/raffle-shopping-frontend:latest
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
