.kubernetes/raffleshopping-services-raffleevents-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml -o .kubernetes
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: raffleshopping-services-raffleevents-api
  name: raffleshopping-services-raffleevents-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: raffleshopping-services-raffleevents-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml -o .kubernetes
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/raffleshopping-backend-default: "true"
        io.kompose.service: raffleshopping-services-raffleevents-api
    spec:
      containers:
        - image: airell/raffle-shopping-raffle-event-service:latest
          name: raffleshopping-services-raffleevents-api
          ports:
            - containerPort: 80
              hostPort: 50001
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
