.kubernetes/raffleshopping-raffleevents-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml -o .kubernetes
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: raffleshopping-services-raffleevents-api
  name: raffleshopping-services-raffleevents-api
spec:
  ports:
    - name: "50001"
      port: 50001
      targetPort: 80
  selector:
    io.kompose.service: raffleshopping-services-raffleevents-api
  type: LoadBalancer
status:
  loadBalancer: {}
