.kubernetes/raffleshopping-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raffleshopping-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
  - host: raffleshopping.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: raffleshopping-services-customers-api
            port:
              number: 50000
      - path: /raffle-events
        pathType: Prefix
        backend:
          service:
            name: raffleshopping-services-raffleevents-api
            port:
              number: 50001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
